--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
+    "react-jazzicon": "^1.0.4",
     "react-scripts": "5.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
